configs/kubernetes/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: paysecure
  labels:
    app.kubernetes.io/name: paysecure
    app.kubernetes.io/part-of: paysecure-dr
