configs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paysecure-gateway
  namespace: paysecure
  labels:
    app: paysecure-gateway
spec:
  type: ClusterIP

  selector:
    app: paysecure-gateway

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
